# iris

./: README.md  pyproject.toml
iris/: __init__.py  corner.py  plotter.py  quickCW.py  skymap.py  trace.py  utils.py  violin.py
nyota/: __init__.py  plotter.py  skymap.py  trace.py
plotsar/: __init__.py  corner.py  plotter.py  skymap.py  trace.py  utils.py
